--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -405,7 +405,7 @@
             "label": "Sketch"
           }
         ],
-        "default": "fade"
+        "default": "sketch"
       },
       {
         "type": "checkbox",
