--- a/assets/columns.css
+++ b/assets/columns.css
@@ -71,6 +71,7 @@
   display: block;
   color: inherit;
   margin-bottom: 15px;
+  font-weight: var(--font-weight-bold);
 }
 
 .columns__description {
