--- a/assets/title.css
+++ b/assets/title.css
@@ -75,6 +75,18 @@
   opacity: calc(100% - var(--image-opacity));
 }
 
+@media (min-width: 820px) {
+  .title:has(+ .products) .title__background-image {
+    height: auto;
+    object-fit: inherit;
+  }
+
+  .title .title__background--fill-section .title__background-image {
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
 @media (min-width: 992px) {
   .title__wrapper--padding-top {
     padding-top: var(--padding-top);
