--- a/sections/product-page.liquid
+++ b/sections/product-page.liquid
@@ -5,6 +5,7 @@
 {%- assign color_scheme          = section.settings.color_scheme -%}
 {%- assign description           = product.description -%}
 {%- assign images                = product.images -%}
+{%- assign infinity_scroll       = section.settings.infinity_scroll -%}
 {%- assign message_label         = section.settings.message_label -%}
 {%- assign padding_top           = section.settings.padding_top -%}
 {%- assign padding_bottom        = section.settings.padding_bottom -%}
@@ -13,6 +14,9 @@
 {%- assign rounded_corners       = section.settings.rounded_corners -%}
 {%- assign show_breadcrumbs      = section.settings.show_breadcrumbs -%}
 {%- assign show_border           = section.settings.show_border -%}
+{%- assign show_carousel         = section.settings.show_carousel -%}
+{%- assign show_controls         = section.settings.show_controls -%}
+{%- assign show_thumbnails       = section.settings.show_thumbnails -%}
 {%- assign title                 = product.name -%}
 {%- assign variant_label         = section.settings.variant_label -%}
 {%- assign variants              = product.variants -%}
@@ -90,19 +94,27 @@
 
   {%- case rounded_corners -%}
     {%- when 'none' -%}
-      --border-radius-rounded-blocks: 0px;
+      --border-radius-rounded-blocks: 0;
+      --border-radius-rounded-images: 0;
     {%- when 'small' -%}
       --border-radius-rounded-blocks: 8px;
+      --border-radius-rounded-images: 4px;
     {%- when 'medium' -%}
       --border-radius-rounded-blocks: 16px;
+      --border-radius-rounded-images: 8px;
     {%- when 'large' -%}
       --border-radius-rounded-blocks: 32px;
+      --border-radius-rounded-images: 8px;
   {%- endcase -%}
 {%- endcapture -%}
 
 {%- render 'variables-product-availability' -%}
 {%- render 'variables-product-variations' -%}
 {%- render 'variables-product-quantity' -%}
+
+{%- if show_carousel -%}
+  {%- render 'variables-product-gallery' -%}
+{%- endif -%}
 {% comment %} CSS variables end {% endcomment %}
 
 <div class="product-main__wrapper color-{{ color_scheme.id }}" style="{{- variables | escape -}}">
@@ -115,18 +127,29 @@
     -%}
 
     <div class="product-main__grid{% if images.size > 3 %} product-main__grid--overlay{%- endif -%}">
-      <ul class="product-main__gallery">
-        {%- for image in images -%}
-          <li class="product-main__gallery-item{% if show_border %} product-main__gallery-item--borders{%- endif -%}">
-            {%- render 'image',
-                image: image,
-                loading: 'lazy',
-                class: 'product-main__gallery-image',
-                size: 'xl'
-            -%}
-          </li>
-        {%- endfor -%}
-      </ul>
+        {%- if show_carousel -%}
+          <div class="product-main__gallery">
+            {{ product | product_gallery:
+              enable_thumbnails: show_thumbnails,
+              enable_controls: show_controls,
+              infinite_scroll: infinity_scroll
+            }}
+          </div>
+
+        {%- else -%}
+          <ul class="product-main__gallery">
+            {%- for image in images -%}
+              <li class="product-main__gallery-item{% if show_border %} product-main__gallery-item--borders{%- endif -%}">
+                {%- render 'image',
+                    image: image,
+                    loading: 'lazy',
+                    class: 'product-main__gallery-image',
+                    size: 'xl'
+                -%}
+              </li>
+            {%- endfor -%}
+          </ul>
+        {%- endif -%}
 
       <div class="product-main__info">
         <h1 class="product-main__title">{{- title -}}</h1>
@@ -257,6 +280,34 @@
           }
         ],
         "default": "collections"
+      },
+      {
+        "type": "header",
+        "content": "Carousel settings"
+      },
+      {
+        "type": "checkbox",
+        "id": "show_carousel",
+        "default": true,
+        "label": "Show product images in carousel"
+      },
+      {
+        "type": "checkbox",
+        "id": "show_controls",
+        "default": true,
+        "label": "Show navigation buttons"
+      },
+      {
+        "type": "checkbox",
+        "id": "show_thumbnails",
+        "default": true,
+        "label": "Show thumbnails"
+      },
+      {
+        "type": "checkbox",
+        "id": "infinity_scroll",
+        "default": true,
+        "label": "Infinity scroll"
       },
       {
         "type": "header",
