--- a/snippets/date-picker.liquid
+++ b/snippets/date-picker.liquid
@@ -8,35 +8,30 @@
   Usage:
 
   {%- render 'date-picker',
-      key: section.key,
-      background: background_accent
+      key: section.key
   -%}
 
 {% endcomment %}
 
 {%- style -%}
   #section-{{ key }} bq-date-picker {
-    --date-picker-border-radius: var(--border-radius, 0);
-    --date-picker-cleanstate-padding: 11px 22px;
-    --date-picker-section-padding: 12px;
-    --date-picker-text-line-height: var(--line-height-lg, 1.5);
-    --date-picker-text-size: 16px;
-    --date-picker-title-line-height: var(--line-height-lg, 1.5);
-    --date-picker-title-size: 16px;
-    --date-picker-wrapper-padding: 10px;
-    --date-picker-background-color: var(--background-primary);
-    --date-picker-box-shadow: 0 0 0 1px var(--background-accent);
-    --date-picker-cleanstate-background-color: var(--background-accent);
-    --date-picker-cleanstate-text-color: var(--color-accent);
-    --date-picker-icon-color: var(--color-accent);
-    --date-picker-placeholder-color: var(--color-placeholder);
-    --date-picker-section-border: 1px solid var(--color-border);
-    --date-picker-text-color: var(--color-primary);
+    /* Colors */
+    --date-picker-icon-color: var(--color-primary);
+    --date-picker-background-color: var(--background-accent);
+    --date-picker-text-color: var(--color-accent);
+    --date-picker-border-color: var(--color-border);
+
+    /* Sizes */
+    --date-picker-wrapper-padding: 12px 24px;
+    --date-picker-text-size: 14px;
+    --date-picker-text-weight: var(--font-weight-semibold);
+    --date-picker-text-line-height: var(--line-height-lg);
+    --date-picker-border-radius: var(--border-radius);
   }
 {%- endstyle -%}
 
 <div class="date-picker__instance">
   <div class="date-picker__component">
-    <bq-date-picker branding-color="{{- background -}}"></bq-date-picker>
+    <bq-date-picker version="next"></bq-date-picker>
   </div>
 </div>
