Added styles for Date picker for mobile, styles for Agreement modal on Register page,  conditions for Footer and Header on 404 page, reordered color sets in Buggy's color scheme, and changed values in templates

--- a/assets/account.css
+++ b/assets/account.css
@@ -295,6 +295,15 @@
   display: block;
 }
 
+.header-with-date-picker ~ #main .account__agreement-modal {
+  display: flex !important;
+  align-items: flex-end;
+}
+
+.header-with-date-picker ~ #main .account__agreement-content {
+  height: calc(100% - var(--date-picker-height-mobile) - 8px);
+}
+
 .account__agreement-inner {
   border: 1px solid var(--color-border);
   width: 100%;
@@ -502,6 +511,14 @@
 
   .account__agreement-closer {
     right: 1px;
+  }
+
+  .header-with-date-picker ~ #main .account__agreement-modal {
+    display: block !important;
+  }
+
+  .header-with-date-picker ~ #main .account__agreement-content {
+    height: 100%;
   }
 }
 
