--- a/assets/base.css
+++ b/assets/base.css
@@ -392,6 +392,7 @@ img {
 }
 
 .container {
+  width: 100%;
   max-width: var(--max-width);
   margin: 0 auto;
   padding: 0 var(--horizontal-padding-mobile);
