--- a/assets/products.css
+++ b/assets/products.css
@@ -51,6 +51,7 @@
   max-width: none;
   object-fit: cover;
   height: 100%;
+  width: 100%;
 }
 
 .products__wrapper--with-background .carousel:before,
