--- a/sections/call-to-action.liquid
+++ b/sections/call-to-action.liquid
@@ -18,6 +18,7 @@
 {%- assign show_transition_bottom  = section.settings.show_transition_bottom -%}
 {%- assign show_transition_top     = section.settings.show_transition_top -%}
 {%- assign tag                     = section.settings.tag -%}
+{%- assign tag_image               = section.settings.tag_image -%}
 {%- assign text_position           = section.settings.text_position -%}
 {%- assign title                   = section.settings.title -%}
 {%- assign transition_color_bottom = section.settings.transition_color_bottom -%}
@@ -125,11 +126,23 @@
   <div class="cta__container container">
 {%- endunless -%}
     <div class="cta__wrapper{% if padding_top != blank or padding_top_mobile != blank %} cta__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} cta__wrapper--padding-bottom{% endif %} color-{{- color_scheme.id -}}" style="{{- variables | escape -}}">
-      {%- if tag != blank or title != blank or button_primary_label != blank and button_primary_url != blank -%}
+      {%- if tag != blank or tag_image != blank or title != blank or button_primary_label != blank and button_primary_url != blank -%}
         {%- if full_width -%}
           <div class="cta__container container">
         {%- endif -%}
           <div class="cta__text-area">
+            {%- if tag_image.url != blank -%}
+              <div class="cta__tag-image-wrapper">
+                {%- render 'image',
+                  image: tag_image,
+                  loading: 'lazy',
+                  class: 'cta__tag-image',
+                  custom_width: '100',
+                  custom_size: '100px'
+                -%}
+              </div>
+            {%- endif -%}
+
             {%- if tag != blank -%}
               <strong class="cta__tag tagline">{{- tag -}}</strong>
             {%- endif -%}
@@ -197,6 +210,12 @@
         "label": "Tagline",
         "default": "HIGHLIGHT",
         "info": "Leave blank to hide tagline"
+      },
+      {
+        "type": "image_picker",
+        "id": "tag_image",
+        "label": "Tagline image (optional)",
+        "info": "Shown above the tagline text"
       },
       {
         "type": "text",
