Added keep_type key to logo for transparent header

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -116,7 +116,8 @@
             class: 'header__logo-image',
             custom_width: '170',
             custom_size: '170px',
-            custom_alt: shop.name
+            custom_alt: shop.name,
+            keep_type: true
         -%}
       </span>
     {%- endif -%}
