--- a/snippets/date-picker.liquid
+++ b/snippets/date-picker.liquid
@@ -16,7 +16,7 @@
 {%- style -%}
   #section-{{ key }} bq-date-picker {
     /* Colors */
-    --date-picker-icon-color: var(--color-primary);
+    --date-picker-icon-color: var(--color-accent);
     --date-picker-background-color: var(--background-accent);
     --date-picker-text-color: var(--color-accent);
     --date-picker-border-color: var(--color-border);
