--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -84,8 +84,7 @@
     {%- render 'image',
         image: logo,
         class: 'footer__logo-image',
-        custom_width: '170',
-        custom_size: '170px',
+        size: 'logo',
         custom_alt: shop.name,
         keep_type: true
     -%}
