--- a/sections/call-to-action.liquid
+++ b/sections/call-to-action.liquid
@@ -25,13 +25,25 @@
 {%- assign transition_color_top    = section.settings.transition_color_top -%}
 {%- assign transition_style        = section.settings.transition_style -%}
 
-{%- capture image_top -%}
-  {%- render 'image-transition-3' -%}
-{%- endcapture -%}
+{%- case transition_style -%}
+  {%- when "sketch" -%}
+    {%- capture image_top -%}
+      {%- render 'image-transition-sketch-3' -%}
+    {%- endcapture -%}
 
-{%- capture image_bottom -%}
-  {%- render 'image-transition-2' -%}
-{%- endcapture -%}
+    {%- capture image_bottom -%}
+      {%- render 'image-transition-sketch-2' -%}
+    {%- endcapture -%}
+
+  {%- when "wave" -%}
+    {%- capture image_top -%}
+      {%- render 'image-transition-wave-1' -%}
+    {%- endcapture -%}
+
+    {%- capture image_bottom -%}
+      {%- render 'image-transition-wave-1' -%}
+    {%- endcapture -%}
+{%- endcase -%}
 
 {% comment %} CSS variables start {% endcomment %}
 {%- capture variables -%}
@@ -321,6 +333,10 @@
           {
             "value": "sketch",
             "label": "Sketch"
+          },
+          {
+            "value": "wave",
+            "label": "Wave"
           }
         ],
         "default": "fade"
