--- a/snippets/variables-product-availability.liquid
+++ b/snippets/variables-product-availability.liquid
@@ -2,7 +2,7 @@
   bq-product-availability {
     --availability-available-background-color: var(--color-green);
     --availability-available-color: var(--color-white);
-    --availability-border-radius: var(--border-radius-rounded);
+    --availability-border-radius: var(--border-radius);
     --availability-padding: 5px 12px;
     --availability-unavailable-background-color: var(--color-red);
     --availability-unavailable-color: var(--color-white);
