--- a/assets/carousel.css
+++ b/assets/carousel.css
@@ -91,7 +91,7 @@
   width: 8px;
   height: 8px;
   transition: all var(--animation-duration) var(--transition-function-ease-out);
-  border-radius: 50%;
+  border-radius: var(--border-radius);
   pointer-events: none;
   background: var(--color-primary-30);
 }
