--- a/assets/collections.css
+++ b/assets/collections.css
@@ -66,7 +66,7 @@
   height: 55px;
   width: 55px;
   margin-bottom: 10px;
-  border-radius: var(--border-radius-circle);
+  border-radius: var(--border-radius);
   display: flex;
   align-items: center;
   justify-content: center;
