--- a/assets/hero.css
+++ b/assets/hero.css
@@ -1,10 +1,10 @@
 .hero__wrapper {
   height: 100%;
+  width: 100%;
   overflow: hidden;
   position: relative;
   display: flex;
   align-items: stretch;
-  flex-grow: 1;
 }
 
 .hero__container {
