Added new cart icon variables, made header icons clickable by full area

--- a/snippets/variables-mini-cart-button.liquid
+++ b/snippets/variables-mini-cart-button.liquid
@@ -11,7 +11,17 @@
     --minicart-button-hover-opacity: 1;
     --minicart-button-padding: 4px;
     --minicart-button-size: 22px;
+    --minicart-button-transition-delay: 0ms;
     --minicart-button-transition-duration: var(--animation-duration);
+    --minicart-button-transition-property: all;
+    --minicart-button-transition-timing-function: var(--transition-function-ease-in-out);
+    --minicart-button-outer-background: transparent;
+    --minicart-button-outer-background-hover: transparent;
+    --minicart-button-outer-border: 1px solid var(--background-accent);
+    --minicart-button-outer-border-radius: 50%;
+    --minicart-button-outer-hover-border: 1px solid var(--background-accent);
+    --minicart-button-outer-padding: 8px 9px 4px;
+    --minicart-button-outer-transition: none;
   }
 
   .page-scrolled .header-transparent bq-minicart-button,
