--- a/assets/header.css
+++ b/assets/header.css
@@ -104,23 +104,18 @@
   height: 100%;
 }
 
-.header__search {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.header__search-opener {
   height: 42px;
   width: 42px;
   margin: 0;
   padding: 8px;
   border: 1px solid var(--background-accent);
-  border-radius: var(--border-radius-circle);
-}
-
-.header__search-opener {
+  border-radius: var(--border-radius);
   color: inherit;
   cursor: pointer;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .header__search-opener svg {
@@ -320,17 +315,6 @@
 .header__buttons:has(.header__nav-wrapper) .header__search,
 .header__buttons:has(.header__nav-wrapper) .header__cart {
   margin: 0 0 0 10px;
-}
-
-.header__cart {
-  width: 42px;
-  height: 42px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 8px;
-  border: 1px solid var(--background-accent);
-  border-radius: var(--border-radius-circle);
 }
 
 .header__cart .fa-spinner-third {
