--- a/snippets/variables-mini-cart-button.liquid
+++ b/snippets/variables-mini-cart-button.liquid
@@ -18,7 +18,7 @@
     --minicart-button-outer-background: transparent;
     --minicart-button-outer-background-hover: transparent;
     --minicart-button-outer-border: 1px solid var(--background-accent);
-    --minicart-button-outer-border-radius: 50%;
+    --minicart-button-outer-border-radius: var(--border-radius);
     --minicart-button-outer-hover-border: 1px solid var(--background-accent);
     --minicart-button-outer-padding: 8px 9px 4px;
     --minicart-button-outer-transition: none;
