Added product price label

--- a/sections/product-page.liquid
+++ b/sections/product-page.liquid
@@ -26,6 +26,7 @@
 {%- assign bundle_items          = product | bundle_items -%}
 {%- assign quantity              = product | product_button -%}
 {%- assign price                 = product | product_price -%}
+{%- assign period                = product | product_price_label -%}
 
 {%- assign label = "" -%}
 
@@ -153,7 +154,10 @@
 
       <div class="product-main__info">
         <h1 class="product-main__title">{{- title -}}</h1>
-        <div class="product-main__price">{{- price -}}</div>
+
+        {%- if price and period -%}
+          <div class="product-main__price">{{- price -}}</div>
+        {%- endif -%}
 
         {%- if description != blank -%}
           <div class="product-main__description bq-content rx-content">{{- description -}}</div>
